--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,13 @@
 　　<title>{{ page.title }}</title>
 </head>
 <body>
-
-　　{{ content }}
-
+    <ul>
+      {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <p>{{ post.excerpt }}</p>
+        </li>
+      {% endfor %}
+    </ul>
 </body>
 </html>
