--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -1112,6 +1112,7 @@ img::-moz-selection {
 .alert-success {
     color: #3c763d;
     background-color: #dff0d8;
+    text-align: center;
     border-color: #d6e9c6;
 }
 
